<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nyc.c4q.shannonalexander_navarro.digitaboo.activities.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/splash_title"
        android:textAllCaps="true"
        android:textColor="@color/purple"
        android:textSize="85dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/instructionsBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startBtn" />

    <Button
        android:id="@+id/modeBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructionsBtn" />

    <Button
        android:id="@+id/add_wordBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modeBtn" />

    <Button
        android:id="@+id/manageBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/manage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_wordBtn" />

    <Button
        android:id="@+id/historyBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/history"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manageBtn" />


</android.support.constraint.ConstraintLayout>
