<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlayGameActivity">

    <TextView
        android:id="@+id/start_tv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/start"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prompt_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/current_team_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/countdown_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/play_rv"
        app:layout_constraintTop_toBottomOf="@id/current_team_tv" />

    <TextView
        android:id="@+id/current_round_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round"
        android:textSize="16sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/play_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buzz_btn"
        app:layout_constraintTop_toBottomOf="@id/play_rv" />

    <Button
        android:id="@+id/buzz_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buzz"
        app:layout_constraintLeft_toRightOf="@id/skip_btn"
        app:layout_constraintRight_toLeftOf="@id/correct_btn"
        app:layout_constraintTop_toBottomOf="@id/play_rv" />

    <Button
        android:id="@+id/correct_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct"
        app:layout_constraintLeft_toRightOf="@id/buzz_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_rv" />
</android.support.constraint.ConstraintLayout>